--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 of Late Hamza Abdul Razzak Shaikh
                             </h4>
 
-                            <p style="color: #eb7d64">Chitapure family invite you to attend our Wedding & Reception
+                            <p style="color: #eb7d64">Chitapure family invite you to attend Reception
                             </p>
 
                             <button class="btn btn-primary" id="open-invitation">Open Our Invitation</button>
@@ -167,7 +167,7 @@
                     src="images/background/flowers/top-left-1.svg">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2 style="font-size: 5rem; margin-top: 3rem;margin-bottom: 0;">The Wedding & Reception Of
+                        <h2 style="font-size: 5rem; margin-top: 3rem;margin-bottom: 0;">The Reception Of
                         </h2>
                         <!-- <i style="color: #bf9b73">
 							Dawat-e-walima</i> -->
@@ -259,7 +259,7 @@
 						</h2> -->
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-md-10 col-md-offset-1" style="display: flex; justify-content: center;">
                         <div class="col-md-6 col-sm-6 text-center">
                             <div class="event-wrap animate-box">
@@ -268,11 +268,11 @@
                                 <div class="event-col">
                                     <i class="icon-clock"></i>
                                     <span class="tanggal">07:00 PM To 11:00 PM</span>
-                                    <!-- <span>Selesai</span> -->
+                                 
                                 </div>
                                 <div class="event-col">
                                     <i class="icon-calendar"></i>
-                                    <!-- <span>Jumat</span> -->
+                                  
 
                                     <span class="tanggal">14th MAY 2023</span>
                                 </div>
@@ -300,7 +300,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row" style="margin-top: 40px; margin-bottom: 40px;">
                     <div class="col-md-10 col-md-offset-1" style="display: flex; justify-content: center;">
@@ -395,7 +395,7 @@
                         <br>
                         <b>- Qur'an 30 : 21 -</b>
                     </div>
-                    <div class="ayat-content animate-box" style="">
+                    <div class="ayat-content animate-box" >
 
                         <span style="direction:rtl; ">وَّ خَلَقۡنٰکُمۡ اَزۡوَاجًا ۙ﴿۸﴾
                         </span> <br>
