--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <div id="overlay">
+        <!-- <div id="overlay">
             <div class="content">
                 <div class="container">
                     <div class="row">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div id="fh5co-header">
             <div class="container">
@@ -598,7 +598,7 @@
         });
     </script>
     <script>
-        day = 14; month = 5 - 1; year = 2023;
+        day = 15; month = 5 - 1; year = 2023;
         hour = 15; minute = 4;
         var d = new Date(year, month, day, hour, minute, 0, 0);
 
