--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-        <!-- <div id="overlay">
+      <div id="overlay">
             <div class="content">
                 <div class="container">
                     <div class="row">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
 
         <div id="fh5co-header">
             <div class="container">
